--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -4,102 +4,35 @@ html body{
     font-family: 'barlow', sans-serif;
     z-index: 1;
 }
+h1, h2{
+    font-family: 'Acme', sans-serif;
+}
 /* ---NAVBAR--- */ 
     .logo{
-        margin-left: 10px;
-        margin-right: 10px;
         width: 80px;
         height: 80px;
       }
-      .navbar {
-        z-index: 2;
-        background: #21211f;
-        display: flex;
-        font-size: 10px;
-        position: fixed;
-        top: 0;
-        text-transform: uppercase;
-      }
-      .nav-list{
-        display: inline-flex;
-        padding-top: 20px;
-        padding-right: 45px;
-        padding-left:5px;
-        font-family: 'barlow', sans-serif;
-      }
-      .nav-list li{
-        text-align: center;
-        list-style: none;
-        padding-right: 10px;
-      }
-      
     @media screen and (min-width: 768px){
-        .header{
-          position: fixed;
-          right: 0;
-          left: 0;
-        }
         .logo{
-          margin-left: 100px;
-          margin-right: 180px;
-          width: 200px;
+          margin-right: 230px;
+          width: 150px;
           height: 150px;
-        }
-        .navbar {
-          z-index: 2;
-          display: flex;
-          font-size: 15px;
-          text-transform: uppercase;
-          position: fixed;
-        }
-        .header-right-wrap{
-            display: inline-flex; 
-            font-family: 'barlow', sans-serif;
-            margin: 20px;
-            margin-right: 90px;
-        }
-        .nav-list{
-         padding:20px;
-        }
-        .nav-list li{
-          padding: 18px;  
-          list-style: none;
-          text-align: center;
-          vertical-align: middle;
         }
       }
     @media screen and (min-width: 1600px){
         .logo{
-            margin-left: 100px;
             margin-right: 364px;
             width: 200px;
             height: 170px;
           }
-        .header-right-wrap{
-            display: inline-flex; 
-            font-family: 'barlow', sans-serif;
-            margin: 20px;
-            margin-right: 450px;
-        }
-        .nav-list{
-            padding: 25px;
-          }
-        .nav-list li{
-            padding-right: 18px;
-            list-style: none;
-            text-align: center;
-            vertical-align: middle;
-          }
       }
-
-    .nav-list li a{
+    .nav-link li a{
         text-decoration: none;
         color: #fcfcf7;
       }
-      .nav-list a:hover{
+      .nav-link a:hover{
         color: #ffb700;
       }
-
 
 /* ---FOOTER--- */ 
 footer{
@@ -310,7 +243,7 @@ footer{
     outline: 0;
     background-color: #fcfcf7;
     padding: 0.75rem 1rem;
-    color: rgba(243, 244, 246, 1);
+    color: #21211f;
 }
 .forgot {
     display: flex;
@@ -418,8 +351,10 @@ footer{
 .photos-services{
     width: 250px;
     height: 150px;
+    margin: 50px;
     margin-left: 50px;
 }
+
 
 @media screen and (min-width: 768px){
     .title-service{
@@ -458,15 +393,16 @@ footer{
         font-family: 'Acme', sans-serif;
         font-size: 30px;
         text-align: left;
+        margin-left: 50px;
     }
     .para-services{
         font-size: 18px;
         margin: 20px;
     }
-    .mecanique{
+    .contain_service{
         padding: 50px;
         padding-bottom: 50px;
-        margin-right: 50px;
+        margin-right: 100px;
     }
     .carrosserie{
         background: #ffb700;
@@ -484,6 +420,9 @@ footer{
         height: 300px;
         float: right; 
         clear: right;
+    }
+    .contain_service{
+        margin: 20px;
     }
 }
 
@@ -510,7 +449,7 @@ footer{
         padding-bottom: 20px;
     }
     .title-bienvenue{
-        margin-top: 200px;
+        margin-top: 20px;
         margin-right: 30px;
         margin-bottom: 0;
         font-family: 'Acme', sans-serif;
@@ -539,7 +478,7 @@ footer{
         padding-bottom: 50px;
     }
     .title-bienvenue{
-        margin-top: 200px;
+        margin-top: 20px;
         font-family: 'Acme', sans-serif;
         font-size: 50px;
         margin-right: 300px;
@@ -656,14 +595,14 @@ footer{
     z-index: -1;
 } 
 .button1:hover::before {
-    width: 105%;
+    width: 110%;
 }
 .button1:hover {
-    color: #111;
+    color: #21211f;
 }
 @media screen and (min-width: 768px){
     .title-contact{
-        margin-top: 100px;
+        margin-top: 50px;
         margin-left: 100px;
         margin-bottom: 0;
         font-family: 'Acme', sans-serif;
@@ -723,7 +662,7 @@ footer{
 }
 @media screen and (min-width: 1600px){
     .title-contact{
-        padding-top: 100px;
+        padding-top: 50px;
         margin-left: 100px;
         margin-bottom: 0;
         font-family: 'Acme', sans-serif;
@@ -1156,13 +1095,13 @@ select{
         margin: 10px;
     }
     .container{
-        margin-left : 90px;
+        margin : 90px;
     }
     .wrapper {
         display: inline-block;
         height: 400px;
         width: 530px;
-        margin: 30px;
+        margin-left: 15px;
         border-radius: 7px 7px 7px 7px;
         /* VIA CSS MATIC https://goo.gl/cIbnS */
         -webkit-box-shadow: 0px 14px 32px 0px rgba(0, 0, 0, 0.15);
